--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,23 @@
-remote_theme: pages-theme/minimal@0.2.0
-title: "Sam's Place"
+title: Sam's Place
+email: info@SamPlaysKeys.com
+description: >- 
+  Personal Blog of Sam Fleming, aka SamPlaysKeys.
+  Check in for updates, ideas, apologies, explanations, and 
+  so much more! Email Info@SamPlaysKeys.com with any questions.
+baseurl: "" 
+url: "https://SamPlaysKeys.github.io"
+twitter_username: SamPlaysKeys
+github_username:  SamPlaysKeys
+
+# Build settings
+# theme: minima | non-remote theme settings
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-theme
-description: "A new place for me to start publishing again."
+  - jekyll-feed
+  - jekyll-remote-theme
+
+exclude:
+   - .jekyll-cache/
+   - gemfiles/
+   - Gemfile
+   - Gemfile.lock
